tests/ui/attr-unsupported.stderr
error: unsupported attribute
 --> tests/ui/attr-unsupported.rs:5:13
  |
5 |     #[serde(skip)]
  |             ^^^^
